# Ueasys-23

./: PERFORMANCE_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
data/characters/: aragorn.yaml  galadriel.yaml  gandalf.yaml  legolas.yaml
data/voice_clips/: README.md
docs/: ARCHITETTURA_SISTEMA.md  EMOTIONAL_SYSTEM.md  GUIDA_INSTALLAZIONE.md  README.md
fantasy-world-rag/: .gitignore  Dockerfile  pyproject.toml
fantasy-world-rag/.github/workflows/: release.yml
fantasy-world-rag/data/characters/: smaug.yaml
fantasy-world-rag/docs/: GUIDA_ADMIN.md  GUIDA_UTENTE.md  LLM_CONFIGURATION.md
fantasy-world-rag/frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
fantasy-world-rag/frontend/src/: App.tsx  index.css
fantasy-world-rag/frontend/src/components/auth/: ProtectedRoute.tsx
fantasy-world-rag/frontend/src/components/chat/: KnowledgeSources.tsx
fantasy-world-rag/frontend/src/components/common/: Input.tsx  Slider.tsx  index.ts
fantasy-world-rag/frontend/src/components/immersive/: CharacterCard.tsx  DialogueStream.tsx  PresenceAvatar.tsx
fantasy-world-rag/frontend/src/components/layout/: ImmersiveLayout.tsx
fantasy-world-rag/frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx
fantasy-world-rag/frontend/src/pages/admin/: CharacterCreator.tsx  CharactersList.tsx  Dashboard.tsx  index.ts
fantasy-world-rag/frontend/src/stores/: characterStore.ts  chatStore.ts
fantasy-world-rag/scripts/: AVVIA.bat  FERMA.bat  chat_client.py  index_knowledge.py  init_db.py  seed_characters.py  setup.ps1  stop.ps1
fantasy-world-rag/src/: __init__.py  main.py
fantasy-world-rag/src/agents/: agent_loop.py  base_agent.py
fantasy-world-rag/src/api/: __init__.py  app.py
fantasy-world-rag/src/api/routes/: __init__.py  characters.py  chat.py  extraction.py  health.py
fantasy-world-rag/src/config/: __init__.py  logging_config.py  settings.py
fantasy-world-rag/src/core/: __init__.py
fantasy-world-rag/src/core/character/: __init__.py  character_engine.py  character_template.py  consistency_checker.py  emotional_state.py
fantasy-world-rag/src/core/memory/: memory_retrieval.py  semantic_memory.py
fantasy-world-rag/src/llm/: __init__.py  anthropic_provider.py  grok_provider.py  llm_manager.py  openai_provider.py
fantasy-world-rag/src/rag/: __init__.py  rag_retriever.py  rag_system.py
fantasy-world-rag/src/services/: __init__.py  character_service.py  chat_service.py  conversation_service.py  document_indexer.py
fantasy-world-rag/tests/: conftest.py  test_api.py  test_character.py
fantasy-world-rag/tests/unit/: test_llm_manager.py  test_providers.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: AdvancedSoulState.tsx  EmotionIndicator.tsx  VoiceInput.tsx  VoiceMode.tsx  VoiceOutput.tsx  index.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx
frontend/src/components/immersive/: CharacterCard.tsx  DialogueStream.tsx  PresenceAvatar.tsx
frontend/src/components/layout/: AdminLayout.tsx  ImmersiveLayout.tsx  Layout.tsx  index.ts
frontend/src/pages/: Chat.tsx  Home.tsx  index.ts
frontend/src/pages/admin/: CharacterCreator.tsx  CharacterKnowledge.tsx  CharactersList.tsx  index.ts
frontend/src/stores/: authStore.ts  chatStore.ts  index.ts
scripts/: AVVIA.bat  SETUP.bat  benchmark_performance.py  run_server.py  start.ps1
src/agents/: __init__.py  agent_factory.py  agent_tools.py  character_agent.py
src/api/: app.py
src/api/routes/: __init__.py  chat.py  conversations.py  extraction.py  voice.py
src/config/: settings.py
src/core/character/: __init__.py  advanced_emotions.py  character_engine.py  emotional_state.py  personality_core.py
src/core/decision/: __init__.py  action_planner.py  decision_engine.py  goal_system.py
src/core/memory/: __init__.py  episodic_memory.py  memory_manager.py
src/data/: __init__.py  character_loader.py
src/db/: __init__.py  session.py
src/llm/: base_provider.py  deepseek_provider.py  prompt_templates.py
src/llm/stt/: __init__.py  base.py  whisper.py
src/llm/tts/: __init__.py  base.py  chatterbox.py  coqui.py  edge.py  elevenlabs.py
src/rag/: knowledge_indexer.py  rag_retriever.py  rag_system.py
src/services/: character_service.py  document_indexer.py  voice_service.py
tests/: test_character_loader.py  test_memory.py
